--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav class="header">
+
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,6 +25,7 @@
                 </li>
             </ul>
         </nav>
+
     </header>
 
     <section class="hero"></section>
