--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <header class="header">
+
         <h1>Hori<span class="seo">seo</span>n</h1>
 
         <nav>
@@ -66,7 +67,7 @@
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -74,7 +75,7 @@
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -82,7 +83,7 @@
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Cost Management Icon" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
