--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Social Solution Services</title>
 </head>
 
@@ -33,7 +33,8 @@
 
     <article class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./img/search-engine-optimization.jpg" alt="search engine optimization image" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization image"
+                class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -42,7 +43,7 @@
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./img/online-reputation-management.jpg" alt="online reputation managment image"
+            <img src="./assets/images/online-reputation-management.jpg" alt="online reputation managment image"
                 class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -52,7 +53,8 @@
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./img/social-media-marketing.jpg" alt="social media marketing image" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing image"
+                class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -65,7 +67,7 @@
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./img/lead-generation.png" alt="Lead Generation Icon" />
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -73,7 +75,7 @@
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./img/brand-awareness.png" alt="Brand Awareness Icon" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -81,7 +83,7 @@
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./img/cost-management.png" alt="Cost Management Icon" />
+            <img src="./assets/images/cost-management.png" alt="Cost Management Icon" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
